# python_project_template

./: LICENSE  README.md  pyproject.toml
my_module/: __main__.py  main.py
